@@ -23,6 +23,8 @@ if py3:
         return s
     text_type = str
     binary_type = bytes
+
+    long_int = int
 else:
     try:
         from cStringIO import StringIO
@@ -46,6 +48,8 @@ else:
         return unicode(s.replace(r'\\', r'\\\\'), "unicode_escape")
     text_type = unicode
     binary_type = str
+
+    long_int = long
 
 def version_less_than_spec(version_tuple, spec_tuple):
     # spec_tuple may have 2 elements, expect version_tuple to have 3 elements
