@@ -1,6 +1,8 @@
 master
 ------
 
+        * Added CURLOPT_XFERINFOFUNCTION (libcurl 7.32.0+).
+
         * Added CURLM_ADDED_ALREADY error constant (libcurl 7.32.1+).
 
         * Added remaining CURLE_* constants through libcurl 7.46.0.
